--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.1.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
