--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "react-speech-recognition": "^4.0.1",
     "serve": "^14.2.5",
     "tailwindcss": "^4.1.13"
   },
